# Nut

./: .clang-format  .clangd  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  Common.props  Debug.props  GenerateProjectFiles.bat  GenerateProjectFiles.sh  GenerateProjectFiles_New.sh  IDE_SETUP.md  LICENSE  Nut.nprx  ProjectStructure.md  README.md  RefreshIntelliSense.bat  RefreshIntelliSense.sh  Release.props  Setup.bat  Setup.sh  TestRiderIntegration.md  WINDOWS-TROUBLESHOOTING.md  clean.sh  diagnose-windows.bat  nutbuild.bat  nutbuild.sh  test-utf8-fix.bat  test-windows.bat  test_prebuild.bat
.cache/clangd/index/: PlayerServiceMain.cpp.6CAF246E4FD5EEDC.idx
.xcodeproj/: project.pbxproj
Binary/: TestNClass
Binary/NutBuildTools/: NutBuildTools  NutBuildTools.deps.json
Binary/NutHeaderTools/: NutHeaderTools  NutHeaderTools.deps.json
BuildSystem/BuildScripts/: BuildEngine.py  Compiler.py  DockerGenerator.py  IntelliSenseRefresher.py  K8SGenerator.py  ProjectFileGenerator.py  ServiceGenerator.py  ServiceMetaLoader.py
Docs/: NCLASS_Usage_Guide.md
LibNut/: README.md
MicroServices/PlayerService/Configs/: PlayerServiceConfig.json
MicroServices/PlayerService/Meta/: PlayerService.Docker.py  PlayerService.Kubernetes.py
MicroServices/PlayerService/Protos/: playerservice.proto
MicroServices/PlayerService/Sources/: PlayerServiceMain.cpp  playerservice.pb.cc  playerservice.pb.h
Nut.xcodeproj/: project.pbxproj
ServiceAllocate/Configs/: ServiceAllocateConfig.json
ServiceAllocate/Meta/: ServiceAllocate.Build.py
ServiceAllocate/Sources/: ServiceAllocateMain.cpp
Source/: Directory.Build.props  Directory.Build.targets
Source/Programs/NBT/: README.md
Source/Programs/NutBuildSystem/: NutBuildSystem.csproj
Source/Programs/NutBuildTools/: BuildTool.py  NutBuildTools.csproj  Program.cs  Requirements.txt
Source/Runtime/ServiceAllocate/UnitTest/: CMakeLists.txt  ServiceAllocateTest.Build.py  ServiceAllocateTest.cpp
Source/Runtime/ServiceAllocate/UnitTest/Meta/: ServiceAllocateTest.Build.py
Source/Runtime/ServiceAllocate/UnitTest/UnitTest.xcodeproj/: project.pbxproj
Tools/: ProjectFileGenerator.bat  ProjectFileGenerator.sh  XCodeFileGenerator.sh
Tools/Docs/: Meta_Files_Guide.md  README_Windows.md
Tools/ProjectGenerator/: __init__.py  cli.py  requirements.txt  tool.py
(+406 files in other folders)
